scss/core/generals/general.scss
/* ... */
@media (max-width: 1023px){
	.ib-fhpb-openers .ib-oitem{
		min-width: 20% !important;
	}
}

.ib-modal-master .ib-pwinfo {
	padding-bottom: 0;
	@media screen and (min-width: 1024px){
		padding-bottom: 60px;
	}
}
 
.buildingPage #full-main .container .property-details.theme-2 .property-information li button.active{
	background-color: #333 !important;
	color: #FFF !important;
	span{
		color: #FFF !important;
	}
}

@media (max-width: 680px){
	#full-main .title-conteiner .content-fixed .content-fixed-title{
		width: 70% !important;
	}
	#full-main .title-conteiner .content-fixed {
    width: 94%;
  }
  .property-details.theme-3 #full-main .title-conteiner .content-fixed{
  	justify-content: space-between;
  }
}

.ib-pilitem{
	flex-grow: 1;
	.ib-pilnumber {
		width: 100%;
		overflow: hidden;
		-o-text-overflow: ellipsis;
		text-overflow: ellipsis;
		white-space: nowrap;
		text-align: center;
	}
}

.ms-order-m{
	order: -1;
}

.ib-infobox.ib-ibmulti .ib-ibproperties{
	display: flex;
	flex-wrap: wrap;
}

@media (max-width: 640px){
	.ib-mmcontent{
		height: 100vh
	}
	.ib-mgeneric {
	  height: 100%;
	}
}

#full-main .property-contact .form-content.large-form .avatar-content{
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
	text-align: center;
}

.page-template-flex-page-neighborhood-detail-silo{
  .clidxboost-sc-filters{
    .content-filters{
      #wrap-filters,
      .wrap-filters{
        .gwr{
          #filters,
          .filters{
            li.all{
              margin-bottom: 0;
            } 
          }
        }
      }
    }
  }
  
  @media (max-width: 990px){
    #header-title{
      .clidxboost-btn-link{
        display: none;
      }
    }
  }
}

.aside{
	.property-information{
		li.rent, 
		li.sale{
			border-right: 1px solid #e5e5e5;
		} 
	}
}

@media (max-width: 640px){
	body.ib-wrap-full-width #flex-filters-theme .content-filters #wrap-filters .gwr-filters,
	body #flex-filters-theme .content-filters #wrap-filters .gwr-filters{
		max-width: 100% !important;
	}
}

.ms-hidden-text{
	overflow: hidden;
	height: 0;
	width: 0;
	position: absolute;
	z-index: 0
}

@media (max-width: 989px){
	body.fixed-active.lg-theme .ib-filter-container.ib-filter-container-inscroll,
	body.fixed-active .ib-filter-container.ib-filter-container-inscroll,
	body.fixed-active .ib-filter-container{
		animation: fadeInDown !important;
		animation-duration: .8s !important;
    animation-fill-mode: both !important;
	}
}

/*----------------------------------------------------------------------------------*/
/* DRIFT UPDATE
/*----------------------------------------------------------------------------------*/
#drift-widget-container {
	z-index: 32 !important;
}

.opened-menu #drift-widget-container {
	z-index: 6 !important;
}

@media (max-width: 767px) {
	.opened-menu{
    overflow: hidden;
    height: 100vh !important;
	}

	.ib-badvanced:before{
		display: none !important;
	}
}

/*----------------------------------------------------------------------------------*/
/* FLOORPLANS
/*----------------------------------------------------------------------------------*/
.ib-grid-floorsplan{
	margin-top: 25px;
	padding: 0 1rem;
	
	@media screen and (min-width: 768px){
		padding: 0;
	}

	.ib-fp-img{
		width: 100%;
		max-width: 800px;
		margin: 0 auto;
		img{
			width: 100%;
		}
	}

	.ib-fp-table{
		margin-top: 15px;
	}
	
	&.tbl_properties_wrapper{
		table{
			tbody{
				tr{
					td:first-child{
						text-align: center;
						justify-content: center;
					}
				}
			}

			thead,
			tbody{
				tr{
					th:nth-child(3),
					td:nth-child(3),
					th:nth-child(7),
					td:nth-child(7){
						display: table-cell !important;
						@media screen and (min-width: 768px){
							display: flex !important;
						}
					} 
				}
			}
		}
	}
	
	@media (max-width: 640px) {
		&.tbl_properties_wrapper{
			table{
				thead,
				tbody{
					tr{
						th:nth-child(2),
						td:nth-child(2){
							display: none !important
						}
					}
				}
			}
		}
	}

	.ib-ms-btn{
		display: flex;
		align-items: center;
		justify-content: center;
		width: 100%;
		height: 100%;
	}
}

/*----------------------------------------------------------------------------------*/
/* OPEN HOUSE
/*----------------------------------------------------------------------------------*/
/*.ms-open{
	display: none !important;
}*/

#full-main,
.view-grid,
.ib-property-detail.ib-pdmodal{
	.ms-wrap-open{
		border: 5px solid #5f9b45;
		padding: 5px 10px;
		font-size: 12px;
		text-transform: uppercase;
		font-weight: 700;
		background-color: #80be58;
		color: #FFF;
		position: absolute;
		top: 15px;
		z-index: 3;
		left: 15px;
		box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);

		&:after,
		&:before{
			content: "";
			display: block;
			width: 5px;
			height: 15px;
			position: absolute;
			top: -20px;
			background-color: #b7a39f;
		}

		&:after{
			right: 15px;
		}

		&:before{
			left: 15px;
		}
	}

	.ms-open-title{
		display: block;
		text-align: center;
		margin-bottom: 4px;
	}

	.ms-open-date{
		font-weight: 400;
	}

	.ms-open-time{
		font-weight: 400;
		display: inline-block;
		margin-left: 5px;
	}
}

#full-main,
.ib-property-detail.ib-pdmodal{
	.ms-wrap-open{
		left: 15px;
		bottom: 15px;
		top: auto;
		right: auto;
		&:after,
		&:before{
			top: auto;
			bottom: -20px;
		}
	}
}

#full-main{
	.ms-open{
		position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    max-width: 1460px;
    margin: 0 auto;
	}
}
/* ... */

